css: max-width ie8 fix (needs to be applied on the wrapping element as well)

--- a/content/media/css/oasis.4.images.less
+++ b/content/media/css/oasis.4.images.less
@@ -18,6 +18,7 @@ article {
 	box-shadow: 7px 7px 30px 1px #222;
 	margin: 1em 3em 1em -6em;
 	float: left;
+	max-width: 100%;
 	& img {
 	    float: none;
 	    margin: 0;
